mongo_stuff/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: practice
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
      - name: mongodb-pvc
        persistentVolumeClaim:
          claimName: mongodb-pvc
      containers:
      - name: mongodb
        image: mongo
        args: ["--dbpath","/data/db"]
        # livenessProbe:
        #   exec:
        #     command:
        #       - mongo
        #       - --disableImplicitSessions
        #       - --eval
        #       - "db.adminCommand('ping')"
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 6
        # readinessProbe:
        #   exec:
        #     command:
        #       - mongo
        #       - --disableImplicitSessions
        #       - --eval
        #       - "db.adminCommand('ping')"
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 6
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-pvc
          mountPath: "/data/db"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: practice
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
