mongo_stuff/mongodb-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongodb
  labels:
    app: mongodb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
      - name: mongodb-pvc  
        # persistentVolumeClaim:
        #   claimName: mongodb-pvc
      containers:
      - name: mongodb
        image: mongo
        args: ["--dbpath","/data/db"]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-pv
          mountPath: "/data/db"
  volumeClaimTemplates:
  - metadata:
      name: mongodb-pv
    spec:
      accessModes: 
      - ReadWriteOnce
      storageClassName: hostpath
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongodb
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
  clusterIP: None
  selector:
    app: mongodb
