mongo_stuff/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations: 
    # kubernetes.io/ingress.class: "nginx"
  namespace: practice
spec:
  tls:
  - hosts:
    - mongoexpress.learn
    secretName: mongoexpress-tls-ingress
  ingressClassName: nginx
  rules:
    - host: mongoexpress.learn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service-internal
                port:
                  number: 8081
